--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
