--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@mercadopago/sdk-react": "^0.0.19",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "history": "^5.3.0",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
@@ -38,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "sass": "^1.83.0",
     "vite": "^5.4.10"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
